# DataToad

./: .gitignore  Dockerfile  GITHUB_SUMMARY.md  README.md  Spock-Vercel-Deploy.md  docker-compose.yml  pyproject.toml
databricks/workflows/: transform_workflow.yml
docs/: ARCHITECTURE.md
frontend/: .env.local  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/.next/: trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/dev/: prerender-manifest.json  routes-manifest.json
frontend/.next/dev/cache/: .rscinfo
frontend/.next/dev/server/: server-reference-manifest.js  server-reference-manifest.json
frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js  lucide-react.js  next.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/types/app/: layout.ts  page.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/components/: ChatInterface.tsx  ForecastChart.tsx  PatternCard.tsx  PatternChart.tsx
src/: __init__.py  config.py
src/api/: dependencies.py  main.py
src/api/routes/: forecast.py  query.py  transform.py
src/api/services/: cache.py  claude.py
src/detection/: __init__.py  classifier.py  validation.py
src/forecast/: pattern_based.py
src/transforms/: __init__.py  hht.py  pipeline.py  stft.py
tests/: .gitkeep
(+22 files in other folders)
